fix scrollbar bug with safari when no mouse is plugged in

--- a/src/sass/app_2/_common/form/dropdown.scss
+++ b/src/sass/app_2/_common/form/dropdown.scss
@@ -166,6 +166,9 @@
                         overflow-y: scroll !important;
                         overflow-x: hidden !important;
 
+                        &::-webkit-scrollbar {
+                            -webkit-appearance: none;
+                        }
                         & > div:nth-child(1) {
                             padding-bottom: 115px !important;
                         }
